Update  comment .html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="card">
 		<ion-icon name="add-outline" onclick="togglemenu()" ></ion-icon><br><br>
-		<ul id="menuList">
+		<ul id="menuList"><!--Can be modified-->
 			<li>Hello</li>
 			<li>Nice to</li>
 			<li>Meet</li>
@@ -18,7 +18,7 @@
 	</div>
 
 
-	<script src="script.js"></script>
+	<script src="script.js"></script><!--JS.-->
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
